--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
 <div class="textblock" style="text-align: left">
    <h2>In the Future</h2>
-      <h3> After college, I would like to go to Physician's Assisstant school. I knew I wanted a flexible job in which I can switch between various health fields. This job connects all aspects of my life by combining my love for helping people and my lobe for science and medicine. This career is important to me because 
+      <h3> After college, I would like to go to Physician's Assistant school. I knew I wanted a flexible job in which I can switch between various health fields. This job connects all aspects of my life by combining my love for helping people and my lobe for science and medicine. This career is important to me because 
   </div>
 
   <div>
